# squeal

./: .gitignore  README.md  RELEASE NOTES.md  cabal.project  circle.yml  scrap-your-nils.md  squeal-core-concepts-handbook.md  squeal-presentation-2018-09-12.html  squeal-presentation-2018-09-12.md  squeal-presentation-raveline.md  stack-ghc810.yaml  stack-ghc8_10.yaml  stack-ghc8_6.yaml  stack-ghc8_8.yaml  stack-ghc9_0.yaml  stack-ghc9_2.yaml  stack-ghc9_4.yaml  stack-ghc9_6.yaml  stack.lts-14.12.yaml  stack.lts-14.27.yaml  stack.lts-15.4.yaml  stack.lts-15.6.yaml  stack.yaml
.circleci/: config.yml
.github/workflows/: ci.yml
squeal-postgresql/: LICENSE  README.md  docs-upload.sh  squeal-postgresql.cabal
squeal-postgresql-catalog/: squeal-postgresql-catalog.cabal
squeal-postgresql-catalog/src/Squeal/PostgreSQL/: Catalog.hs
squeal-postgresql-catalog/src/Squeal/PostgreSQL/Catalog/: Query.hs  Query2.hs
squeal-postgresql-ltree/: README.md  squeal-postgresql-ltree.cabal
squeal-postgresql-ltree/src/Squeal/PostgreSQL/: LTree.hs
squeal-postgresql-ltree/test/: Property.hs
squeal-postgresql-plugin/: squeal-postgresql-plugin.cabal
squeal-postgresql-plugin/src/Squeal/PostgreSQL/: Has.hs  Plugin.hs
squeal-postgresql-plugin/test/: Plugin.hs
squeal-postgresql-uuid-ossp/: LICENSE  README.md  squeal-postgresql-uuid-ossp.cabal
squeal-postgresql-uuid-ossp/src/Squeal/PostgreSQL/UUID/: OSSP.hs
squeal-postgresql/bench/: Gauge.hs  README.md
squeal-postgresql/bench/Gauge/: DBHelpers.hs  DBSetup.hs  Queries.hs  Schema.hs
squeal-postgresql/benchmarks/: Main.hs
squeal-postgresql/benchmarks/lib/: DBHelpers.hs  DBSetup.hs  Queries.hs  Schema.hs
squeal-postgresql/exe/: Example.hs
squeal-postgresql/src/Squeal/: PostgreSQL.hs
squeal-postgresql/src/Squeal/PostgreSQL/: Alias.hs  Binary.hs  Definition.hs  Encode.hs  Expression.hs  List.hs  Manipulation.hs  Migration.hs  PG.hs  PG2.hs  PQ.hs  PQ2.hs  Pool.hs  Prettyprint.hs  Query.hs  Render.hs  Schema.hs  Session.hs  Statement.hs  Transaction.hs  Tutorial.hs  Type.hs  Untitled-1
squeal-postgresql/src/Squeal/PostgreSQL/Definition/: Comment.hs  Constraint.hs  Function.hs  Index.hs  Procedure.hs  Schema.hs  Table.hs  Type.hs  View.hs
squeal-postgresql/src/Squeal/PostgreSQL/Definition/Table/: Column.hs  Constraint.hs
squeal-postgresql/src/Squeal/PostgreSQL/Expression/: Aggregate.hs  Aggregate2.hs  Array.hs  Collection.hs  Comparison.hs  Composite.hs  Default.hs  Inline.hs  Inline2.hs  Json.hs  Literal.hs  Logic.hs  Math.hs  Null.hs  Parameter.hs  Range.hs  Range2.hs  Set.hs  SetOf.hs  Sort.hs  Sort2.hs  Subquery.hs  Text.hs  TextSearch.hs  Time.hs  Type.hs  Window.hs  Window2.hs
squeal-postgresql/src/Squeal/PostgreSQL/Manipulation/: Call.hs  Delete.hs  Insert.hs  Update.hs
squeal-postgresql/src/Squeal/PostgreSQL/PQ/: Connection.hs  Decode.hs  Decode2.hs  Encode.hs  Encode2.hs  Encode3.hs  Encode4.hs  Exception.hs  Indexed.hs  Migration.hs  Monad.hs  Monad2.hs  Monad3.hs  Oid.hs  Oid2.hs  Oid3.hs  Oid4.hs  Pool.hs  Result.hs  Statement.hs  Statement2.hs  Transaction.hs
squeal-postgresql/src/Squeal/PostgreSQL/Query/: From.hs  Select.hs  Table.hs  Values.hs  With.hs
squeal-postgresql/src/Squeal/PostgreSQL/Query/From/: Join.hs  Set.hs
squeal-postgresql/src/Squeal/PostgreSQL/Session/: Connection.hs  Decode.hs  Encode.hs  Exception.hs  Indexed.hs  Migration.hs  Monad.hs  Notify.hs  Oid.hs  Pool.hs  Result.hs  Statement.hs  Transaction.hs
squeal-postgresql/src/Squeal/PostgreSQL/Session/Transaction/: Unsafe.hs
squeal-postgresql/src/Squeal/PostgreSQL/Type/: .Schema.hs.swp  Alias.hs  List.hs  PG.hs  Schema.hs
squeal-postgresql/test/: Doc.hs  DocTest.hs  Main.hs  Property.hs  Spec.hs
squeal-postgresql/test/Specs/: Binary.hs  ExceptionHandling.hs  Specs.hs
squeal-postgresql/test/Squeal/PostgreSQL/: DefinitionSpec.hs  ManipulationSpec.hs  QuerySpec.hs  StatementSpec.hs
squeel-postgresql/: squeel-postgresql.cabal
squeel-postgresql/exe/: Example.hs
squeel-postgresql/src/Squeel/: PostgreSQL.hs
squeel-postgresql/src/Squeel/PostgreSQL/: Binary.hs  Binary2.hs  Connection.hs  PQ.hs  Query.hs  Query2.hs  Schema.hs  Statement.hs  Type.hs  Type2.hs  Value.hs  Value2.hs
squeel-postgresql/src/Squeel/PostgreSQL/Query/: Expression.hs  Relation.hs
squeel-postgresql/test/Squeel/: PostgreSQLSpec.hs
squeel-postgresql/test/Squeel/PostgreSQL/: ConnectionSpec.hs  QuerySpec.hs  StatementSpec.hs  TypeSpec.hs  ValueSpec.hs
squeel-postgresql/test/Squeel/PostgreSQL/Query/: ExpressionSpec.hs  RelationSpec.hs
