name: squeal-postgresql-catalog
version: 0.0.1
synopsis: Squeal PostgreSQL Catalog
description: Provide a schema for the PostgreSQL Catalog
homepage: https://github.com/morphismtech/squeal
bug-reports: https://github.com/morphismtech/squeal/issues
license: BSD3
license-file: LICENSE
author: Eitan Chatav
maintainer: eitan.chatav@gmail.com
copyright: Copyright (c) 2017 Morphism, LLC
category: Database
build-type: Simple
cabal-version: >=1.18
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/morphismtech/squeal.git

library
  hs-source-dirs: src
  exposed-modules:
    Squeal.PostgreSQL.Catalog
    Squeal.PostgreSQL.Catalog.Query
    Squeal.PostgreSQL.Catalog.Query2
  default-language: Haskell2010
  ghc-options: -Wall -freduction-depth=5000
  build-depends:
      base >= 4.13.0.0 && < 5.0
    , generics-sop
    , haskell-src-exts
    , squeal-postgresql
    , template-haskell
