name: squeal-postgresql-ltree
version: 0.1.0.0
synopsis: LTree extension for Squeal
description: LTree extension for Squeal
homepage: https://github.com/morphismtech/squeal/ltree
bug-reports: https://github.com/morphismtech/squeal/issues
license: BSD3
license-file: LICENSE
author: Eitan Chatav
maintainer: eitan.chatav@gmail.com
copyright: Copyright (c) 2020 Morphism, LLC
category: Database
build-type: Simple
cabal-version: >=1.18
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/morphismtech/squeal.git

library
  hs-source-dirs: src
  exposed-modules:
    Squeal.PostgreSQL.LTree
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  build-depends:
      base >= 4.12.0.0 && < 5.0
    , squeal-postgresql >= 0.7.0.1
