cabal-version: 2.2
name: squeal-postgresql-ltree
version: 0.1.0.1
synopsis: LTree extension for Squeal
description: LTree extension for Squeal
homepage: https://github.com/morphismtech/squeal/ltree
bug-reports: https://github.com/morphismtech/squeal/issues
license: BSD-3-Clause
license-file: LICENSE
author: Eitan Chatav
maintainer: eitan.chatav@gmail.com
copyright: Copyright (c) 2022 Morphism, LLC
category: Database
build-type: Simple
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/morphismtech/squeal.git

library
  hs-source-dirs: src
  exposed-modules:
    Squeal.PostgreSQL.LTree
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base >= 4.12.0.0 && < 5.0
    , bytestring >= 0.10.10.0
    , generics-sop >= 0.5.1.0
    , mtl >= 2.2.2
    , postgresql-binary >= 0.12.2
    , postgresql-libpq >= 0.9.4.2
    , squeal-postgresql >= 0.7.0.1
    , text >= 1.2.3.2
