name: squeal-postgresql-plugin
version: 0.0.1
synopsis: Squeal PostgreSQL Type Checking Plugins
description: Type Checking plugins for Squeal
homepage: https://github.com/morphismtech/squeal
bug-reports: https://github.com/morphismtech/squeal/issues
author: Eitan Chatav
maintainer: eitan.chatav@gmail.com
copyright: Copyright (c) 2017 Morphism, LLC
category: Database
build-type: Simple
cabal-version: >=1.18
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/morphismtech/squeal.git

library
  hs-source-dirs: src
  exposed-modules:
    Squeal.PostgreSQL.Has
    Squeal.PostgreSQL.Plugin
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  build-depends:
      base >= 4.12.0.0 && < 5.0
    , ghc
    , ghc-tcplugins-extra

test-suite plugin
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -fplugin Squeal.PostgreSQL.Plugin
  main-is: Plugin.hs
  build-depends:
      base >= 4.12.0.0 && < 5.0
    , squeal-postgresql
    , squeal-postgresql-plugin
