cabal-version: 2.2
name: squeal-postgresql-uuid-ossp
version: 0.1.0.1
synopsis: UUID OSSP extension for Squeal
description: UUID OSSP extension for Squeal
homepage: https://github.com/morphismtech/squeal/uuid-ossp
bug-reports: https://github.com/morphismtech/squeal/issues
license: BSD-3-Clause
license-file: LICENSE
author: Eitan Chatav
maintainer: eitan.chatav@gmail.com
copyright: Copyright (c) 2022 Morphism, LLC
category: Database
build-type: Simple
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/morphismtech/squeal.git

library
  hs-source-dirs: src
  exposed-modules:
    Squeal.PostgreSQL.UUID.OSSP
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base >= 4.12.0.0 && < 5.0
    , squeal-postgresql >= 0.7.0.1
