name: squeal-postgresql
version: 0.8.1.1
synopsis: Squeal PostgreSQL Library
description: Squeal is a type-safe embedding of PostgreSQL in Haskell
homepage: https://github.com/morphismtech/squeal
bug-reports: https://github.com/morphismtech/squeal/issues
license: BSD3
author: Eitan Chatav
maintainer: eitan.chatav@gmail.com
copyright: Copyright (c) 2021 Morphism, LLC
category: Database
build-type: Simple
cabal-version: >=1.18
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/morphismtech/squeal.git

library
  hs-source-dirs: src
  exposed-modules:
    Squeal.PostgreSQL.Type.Schema
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      aeson >= 1.4.7.1
    , base >= 4.12.0.0 && < 5.0
    , binary >= 0.8.7.0
    , binary-parser >= 0.5.5
    , bytestring >= 0.10.10.0
    , bytestring-strict-builder >= 0.4.5.3
    , deepseq >= 1.4.4.0
    , exceptions >= 0.10.3
    , free-categories >= 0.2.0.0
    , generics-sop >= 0.5.1.0
    , mmorph >= 1.1.3
    , monad-control >= 1.0.2.3
    , mtl >= 2.2.2
    , network-ip >= 0.3.0.3
    , postgresql-binary >= 0.12.2
    , postgresql-libpq >= 0.9.4.2
    , profunctors >= 5.5.2
    , records-sop >= 0.1.0.3
    , resource-pool >= 0.2.3.2
    , scientific >= 0.3.6.2
    , text >= 1.2.3.2
    , time >= 1.9.3
    , transformers >= 0.5.6.2
    , transformers-base >= 0.4.5.2
    , unliftio >= 0.2.12.1
    , uuid-types >= 1.0.3
    , vector >= 0.12.1.2

test-suite doctest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall
  main-is: Doc.hs
  build-depends:
      base >= 4.12.0.0 && < 5.0
    , doctest >= 0.16.3
