name: squeal-postgresql
version: 0.8.1.1
synopsis: Squeal PostgreSQL Library
description: Squeal is a type-safe embedding of PostgreSQL in Haskell
homepage: https://github.com/morphismtech/squeal
bug-reports: https://github.com/morphismtech/squeal/issues
license: BSD3
author: Eitan Chatav
maintainer: eitan.chatav@gmail.com
copyright: Copyright (c) 2021 Morphism, LLC
category: Database
build-type: Simple
cabal-version: >=1.18

source-repository head
  type: git
  location: https://github.com/morphismtech/squeal.git

library
  hs-source-dirs: src
  exposed-modules:
    Squeal.PostgreSQL.Type.Schema
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base >= 4.12.0.0 && < 5.0

test-suite doctest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall
  main-is: Doc.hs
  build-depends:
      base >= 4.12.0.0 && < 5.0
    , doctest >= 0.16.3
    , squeal-postgresql
