cabal-version: 2.2
name: squeal-postgresql
version: 0.9.0.0
synopsis: Squeal PostgreSQL Library
description: Squeal is a type-safe embedding of PostgreSQL in Haskell
homepage: https://github.com/morphismtech/squeal
bug-reports: https://github.com/morphismtech/squeal/issues
license: BSD-3-Clause
license-file: LICENSE
author: Eitan Chatav
maintainer: eitan.chatav@gmail.com
copyright: Copyright (c) 2022 Morphism, LLC
category: Database
build-type: Simple
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/morphismtech/squeal.git

library
  hs-source-dirs: src
  exposed-modules:
    Squeal.PostgreSQL
    Squeal.PostgreSQL.Definition
    Squeal.PostgreSQL.Definition.Comment
    Squeal.PostgreSQL.Definition.Constraint
    Squeal.PostgreSQL.Definition.Function
    Squeal.PostgreSQL.Definition.Index
    Squeal.PostgreSQL.Definition.Table
    Squeal.PostgreSQL.Definition.Type
    Squeal.PostgreSQL.Definition.Procedure
    Squeal.PostgreSQL.Definition.Schema
    Squeal.PostgreSQL.Definition.View
    Squeal.PostgreSQL.Expression
    Squeal.PostgreSQL.Expression.Aggregate
    Squeal.PostgreSQL.Expression.Array
    Squeal.PostgreSQL.Expression.Comparison
    Squeal.PostgreSQL.Expression.Composite
    Squeal.PostgreSQL.Expression.Default
    Squeal.PostgreSQL.Expression.Json
    Squeal.PostgreSQL.Expression.Inline
    Squeal.PostgreSQL.Expression.Logic
    Squeal.PostgreSQL.Expression.Math
    Squeal.PostgreSQL.Expression.Null
    Squeal.PostgreSQL.Expression.Parameter
    Squeal.PostgreSQL.Expression.Range
    Squeal.PostgreSQL.Expression.Sort
    Squeal.PostgreSQL.Expression.Subquery
    Squeal.PostgreSQL.Expression.Text
    Squeal.PostgreSQL.Expression.TextSearch
    Squeal.PostgreSQL.Expression.Time
    Squeal.PostgreSQL.Expression.Type
    Squeal.PostgreSQL.Expression.Window
    Squeal.PostgreSQL.Manipulation
    Squeal.PostgreSQL.Manipulation.Call
    Squeal.PostgreSQL.Manipulation.Delete
    Squeal.PostgreSQL.Manipulation.Insert
    Squeal.PostgreSQL.Manipulation.Update
    Squeal.PostgreSQL.Render
    Squeal.PostgreSQL.Query
    Squeal.PostgreSQL.Query.From
    Squeal.PostgreSQL.Query.From.Join
    Squeal.PostgreSQL.Query.From.Set
    Squeal.PostgreSQL.Query.Select
    Squeal.PostgreSQL.Query.Table
    Squeal.PostgreSQL.Query.Values
    Squeal.PostgreSQL.Query.With
    Squeal.PostgreSQL.Session
    Squeal.PostgreSQL.Session.Connection
    Squeal.PostgreSQL.Session.Decode
    Squeal.PostgreSQL.Session.Encode
    Squeal.PostgreSQL.Session.Exception
    Squeal.PostgreSQL.Session.Indexed
    Squeal.PostgreSQL.Session.Migration
    Squeal.PostgreSQL.Session.Monad
    Squeal.PostgreSQL.Session.Oid
    Squeal.PostgreSQL.Session.Pool
    Squeal.PostgreSQL.Session.Result
    Squeal.PostgreSQL.Session.Statement
    Squeal.PostgreSQL.Session.Transaction
    Squeal.PostgreSQL.Session.Transaction.Unsafe
    Squeal.PostgreSQL.Type
    Squeal.PostgreSQL.Type.Alias
    Squeal.PostgreSQL.Type.List
    Squeal.PostgreSQL.Type.PG
    Squeal.PostgreSQL.Type.Schema
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      aeson >= 1.4.7.1
    , base >= 4.12.0.0 && < 5.0
    , binary >= 0.8.7.0
    , binary-parser >= 0.5.5
    , bytestring >= 0.10.10.0
    , bytestring-strict-builder >= 0.4.5.3
    , deepseq >= 1.4.4.0
    , exceptions >= 0.10.3
    , free-categories >= 0.2.0.0
    , generics-sop >= 0.5.1.0
    , hashable >= 1.3.0.0
    , mmorph >= 1.1.3
    , monad-control >= 1.0.2.3
    , mtl >= 2.2.2
    , network-ip >= 0.3.0.3
    , postgresql-binary >= 0.12.2
    , postgresql-libpq >= 0.9.4.2
    , profunctors >= 5.5.2
    , records-sop >= 0.1.0.3
    , resource-pool >= 0.2.3.2
    , scientific >= 0.3.6.2
    , text >= 1.2.3.2
    , time >= 1.9.3
    , transformers >= 0.5.6.2
    , transformers-base >= 0.4.5.2
    , unliftio >= 0.2.12.1
    , uuid-types >= 1.0.3
    , vector >= 0.12.1.2

test-suite doctest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall
  main-is: Doc.hs
  build-depends:
      base >= 4.12.0.0 && < 5.0
    , doctest >= 0.16.3
  if impl(ghc >= 9.0.0)
    buildable: False

test-suite properties
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall 
  main-is: Property.hs
  build-depends:
      base >= 4.12.0.0 && < 5.0
    , bytestring >= 0.10.10.0
    , hedgehog >= 1.0.2
    , generics-sop >= 0.5.1.0
    , mtl >= 2.2.2
    , scientific >= 0.3.6.2
    , squeal-postgresql
    , time >= 1.9.3
    , with-utf8 >= 1.0

test-suite spec
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall
  main-is: Spec.hs
  build-depends:
      async >= 2.2.2
    , base >= 4.12.0.0 && < 5.0
    , bytestring >= 0.10.10.0
    , generics-sop >= 0.5.1.0
    , hspec >= 2.7.1
    , mtl >= 2.2.2
    , squeal-postgresql
    , text >= 1.2.3.2
    , vector >= 0.12.1.2

benchmark gauge
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Gauge.hs
  other-modules:
      Gauge.DBHelpers
    , Gauge.DBSetup
    , Gauge.Queries
    , Gauge.Schema
  default-language: Haskell2010
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
    -rtsopts
    -funbox-strict-fields
  build-depends:
      base >= 4.12.0.0 && < 5.0
    , bytestring >= 0.10.10.0
    , deepseq >= 1.4.4.0
    , gauge >= 0.2.5
    , generic-random >= 1.3.0.1
    , generics-sop >= 0.5.1.0
    , monad-loops >= 0.4.3
    , mtl >= 2.2.2
    , QuickCheck >= 2.13.2
    , quickcheck-instances >= 0.3.22
    , scientific >= 0.3.6.2
    , squeal-postgresql
    , text >= 1.2.3.2
    , with-utf8 >= 1.0

executable example
  default-language: Haskell2010
  hs-source-dirs: exe
  ghc-options: -Wall
  main-is: Example.hs
  build-depends:
      base >= 4.10.0.0 && < 5.0
    , bytestring >= 0.10.10.0
    , generics-sop >= 0.5.1.0
    , mtl >= 2.2.2
    , squeal-postgresql
    , text >= 1.2.3.2
    , transformers >= 0.5.6.2
    , vector >= 0.12.1.2
