name: squeel-postgresql
version: 0.0.0.1
synopsis: Squeel PostgreSQL Library
description: Squeel is a type-safe embedding of PostgreSQL and libpq in Haskell
homepage: https://github.com/echatav/squeel
author: Eitan Chatav
maintainer: eitan.chatav@gmail.com
copyright: 2017 Morphism, LLC
category: Database
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Squeel.PostgreSQL
    Squeel.PostgreSQL.PQ
    Squeel.PostgreSQL.Query
    Squeel.PostgreSQL.Type
    Squeel.PostgreSQL.Value
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  build-depends: base
    , aeson
    , Boolean
    , bytestring
    , lifted-base
    , monad-control
    , mtl
    , postgresql-binary
    , postgresql-libpq
    , scientific
    , text
    , time
    , transformers-base
    , uuid
    , vinyl

test-suite squeel-postgresql-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall -Werror
  main-is: Spec.hs
  other-modules:
    Squeel.PostgreSQLSpec
    Squeel.PostgreSQL.ConnectionSpec
    Squeel.PostgreSQL.QuerySpec
    Squeel.PostgreSQL.Query.ExpressionSpec
    Squeel.PostgreSQL.Query.RelationSpec
    Squeel.PostgreSQL.TypeSpec
    Squeel.PostgreSQL.ValueSpec
  build-depends: base
    , Boolean
    , hspec
    , squeel-postgresql
    , vinyl

source-repository head
  type: git
  location: https://github.com/echatav/squeel
