name: squeel-postgresql
version: 0.0.0.1
synopsis: Squeel PostgreSQL Library
description: Squeel is a type-safe embedding of PostgreSQL and libpq in Haskell
homepage: https://github.com/echatav/squeel
author: Eitan Chatav
maintainer: eitan.chatav@gmail.com
copyright: 2017 Morphism, LLC
category: Database
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Squeel.PostgreSQL
    Squeel.PostgreSQL.Binary2
    Squeel.PostgreSQL.PQ
    Squeel.PostgreSQL.Statement
    Squeel.PostgreSQL.Schema
  default-language: Haskell2010
  ghc-options: -Wall -Werror -fprint-explicit-kinds
  build-depends:
      aeson
    , base
    , bytestring
    , generics-sop
    , lifted-base
    , monad-control
    , mtl
    , network-ip
    , postgresql-binary
    , postgresql-libpq
    , scientific
    , text
    , time
    , transformers
    , transformers-base
    , uuid

test-suite squeel-postgresql-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall -Werror
  main-is: Spec.hs
  other-modules:
    Squeel.PostgreSQL.StatementSpec
  build-depends:
      base
    , generics-sop
    , hspec
    , squeel-postgresql

executable squeel-postgresql-example
  default-language: Haskell2010
  hs-source-dirs: exe
  ghc-options: -Wall -Werror
  main-is: Example.hs
  build-depends:
      base
    , bytestring
    , generics-sop
    , mtl
    , squeel-postgresql
    , transformers
    , transformers-base

source-repository head
  type: git
  location: https://github.com/echatav/squeel
